--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.15.10",
-    "@mui/styles": "^5.15.10",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.21.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/react": "^17.0.76",
+    "dayjs": "^1.11.13",
     "react": "^17.0.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^17.0.0",
@@ -48,5 +48,9 @@
   "devDependencies": {
     "@types/react-dom": "^18.2.19",
     "react-scripts": "^5.0.1"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
