--- a/package.json
+++ b/package.json
@@ -61,9 +61,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.11.0",
-    "prettier": "^3.3.3",
-    "react-scripts": "^5.0.1",
-    "typescript-eslint": "^8.11.0"
+    "prettier": "^3.3.3"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
