--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@mui/x-date-pickers": "^7.21.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/react": "^17.0.76",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
+    "jsonwebtoken": "^9.0.2",
     "react": "^17.0.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^17.0.0",
@@ -53,9 +55,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
