--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.21.0",
     "@reduxjs/toolkit": "^1.9.6",
